Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69794

Wrong coordinates when changing screen scaling while application runs on MacOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.2
    • 5.11.1
    • GUI: Window management
    • None
    • macOS

      On MacOS 10.13.6 with Qt 5.11.1 I get the following error: When the screen scaling is changed during the runtime of an application the coordinates of QML items are all offset incorrectly. Once the windows titlebar was clicked and the window is moved slightly the coordinates are back to normal. This leads me to assume that the "scaling-has-changed" event is somehow not handled correctly and only once the "window-was-moved" event is handled the coordinates are calculated correctly.

      The bug was verified on two different machines both with HiDPI displays.

      I have compiled a minimal working example with instructions on how to reproduce it here: https://github.com/Foaly/Qt-Bugs/tree/master/screen_scaling_coords_macos

        For Gerrit Dashboard: QTBUG-69794
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            maximilian_wagenbach Maximilian Wagenbach
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes